# hapstone

./: LICENSE  README.md  TODO.md  hapstone.cabal  stack.yaml
examples/: Test1.hs  Test2.hs  Test3.hs
src/: Arm.chs  Arm64.chs  Capstone.chs  Mips.chs  Ppc.chs  Sparc.chs  SystemZ.chs  Test.hs  X86.chs  XCore.chs  test.c
src/Hapstone/: Capstone.hs
src/Hapstone/Internal/: Arm.chs  Arm64.chs  Capstone.chs  M68K.chs  Mips.chs  Ppc.chs  Sparc.chs  SystemZ.chs  Util.hs  X86.chs  XCore.chs
src/Internal/: Arm.chs  Arm64.chs  Capstone.chs  Mips.chs  Ppc.chs  Sparc.chs  SystemZ.chs  X86.chs  XCore.chs
test/: Arm64Default.hs  Arm64Spec.hs  ArmDefault.hs  ArmSpec.hs  arm64_test.c  arm_test  arm_test.c
test/Internal/: CapstoneSpec.hs  Default.hs  arm64_test  mips_test  ppc_test  sparc_test  systemz_test  x86_test  xcore_test
test/Internal/Arm/: Default.hs  StorableSpec.hs  arm_test.c  default_sizes
test/Internal/Arm64/: Default.hs  StorableSpec.hs  arm64_test.c  default_sizes
test/Internal/M68K/: Default.hs  StorableSpec.hs
test/Internal/Mips/: Default.hs  StorableSpec.hs  default_sizes  mips_test.c
test/Internal/Ppc/: Default.hs  StorableSpec.hs  default_sizes  ppc_test.c
test/Internal/Sparc/: Default.hs  StorableSpec.hs  default_sizes  sparc_test.c
test/Internal/SystemZ/: Default.hs  StorableSpec.hs  default_sizes  systemz_test.c
test/Internal/X86/: Default.hs  StorableSpec.hs  default_sizes  x86_test.c
test/Internal/XCore/: Default.hs  StorableSpec.hs  default_sizes  xcore_test.c
