name:                hapstone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hapstone#readme
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           2016 Inokentiy Babushkin
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Capstone, Arm64, Arm, Mips, Ppc, Sparc
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  extra-libraries:     capstone
  build-tools:         c2hs
  --includes:            capstone/capstone.h

test-suite hapstone-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       hapstone
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hapstone
